--- a/package.json
+++ b/package.json
@@ -5,14 +5,25 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "db:migrate": "prisma migrate save --experimental && prisma migrate up --experimental --verbose",
+    "db:generate": "prisma generate",
+    "db:studio": "prisma studio --experimental"
   },
   "dependencies": {
+    "@prisma/client": "^2.1.3",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "jsonwebtoken": "^8.5.1",
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
   "devDependencies": {
+    "@prisma/cli": "^2.1.3",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.6",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.0.14",
     "@types/react": "^16.9.41",
     "typescript": "^3.9.6"
