--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "db:studio": "prisma studio --experimental"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "@prisma/client": "^2.1.3",
+    "@types/js-cookie": "^2.2.6",
+    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
+    "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "next": "9.4.4",
     "react": "16.13.1",
@@ -22,7 +25,6 @@
   "devDependencies": {
     "@prisma/cli": "^2.1.3",
     "@types/bcryptjs": "^2.4.2",
-    "@types/cors": "^2.8.6",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.0.14",
     "@types/react": "^16.9.41",
