--- a/package.json
+++ b/package.json
@@ -6,21 +6,25 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "db:migrate": "prisma migrate save --experimental && prisma migrate up --experimental --verbose",
+    "db:migrate": "prisma migrate save --experimental && prisma migrate up --experimental",
     "db:generate": "prisma generate",
     "db:studio": "prisma studio --experimental"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@prisma/client": "^2.1.3",
     "@types/js-cookie": "^2.2.6",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
+    "formik": "^2.1.4",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "next": "9.4.4",
+    "next-cookies": "^2.0.3",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-tracked": "^1.4.1"
   },
   "devDependencies": {
     "@prisma/cli": "^2.1.3",
