--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@prisma/client": "^2.1.3",
+    "@reduxjs/toolkit": "^1.4.0",
     "@types/js-cookie": "^2.2.6",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
@@ -21,9 +22,13 @@
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "next": "9.4.4",
+    "next-cookies": "^2.0.3",
+    "next-redux-wrapper": "^6.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-tracked": "^1.4.1"
+    "react-redux": "^7.2.0",
+    "react-tracked": "^1.4.1",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@prisma/cli": "^2.1.3",
@@ -31,6 +36,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.0.14",
     "@types/react": "^16.9.41",
+    "@types/react-redux": "^7.1.9",
     "typescript": "^3.9.6"
   }
 }
