--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@prisma/client": "^2.1.3",
     "@reduxjs/toolkit": "^1.4.0",
     "@types/js-cookie": "^2.2.6",
